// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPRouterWithGraphIQL should be bypassed with no debug env 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "DEV_ACCESS_MECHANISM",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:11112\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [],
}
`;

exports[`wrapHTTPRouterWithGraphIQL should serve GraphIQL HTML 2`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "DEV_ACCESS_MECHANISM",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "data": "
<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"utf-8\\" />
  <title>GraphiQL</title>
  <meta name=\\"robots\\" content=\\"noindex\\" />
  <style>
    html, body {
      height: 100%;
      margin: 0;
      overflow: hidden;
      width: 100%;
    }
  </style>
  <link href=\\"//unpkg.com/graphiql@0.11.11/graphiql.css\\" rel=\\"stylesheet\\" />
  <script src=\\"//unpkg.com/react@15.6.1/dist/react.min.js\\"></script>
  <script src=\\"//unpkg.com/react-dom@15.6.1/dist/react-dom.min.js\\"></script>
  <script src=\\"//unpkg.com/graphiql@0.11.11/graphiql.min.js\\"></script>
  
  <script src=\\"//cdn.jsdelivr.net/fetch/2.0.1/fetch.min.js\\"></script>
  
  

</head>
<body>
  <script>
    // Collect the URL parameters
    var parameters = {};
    window.location.search.substr(1).split('&').forEach(function (entry) {
      var eq = entry.indexOf('=');
      if (eq >= 0) {
        parameters[decodeURIComponent(entry.slice(0, eq))] =
          decodeURIComponent(entry.slice(eq + 1));
      }
    });
    // Produce a Location query string from a parameter object.
    function locationQuery(params, location) {
      return (location ? location: '') + '?' + Object.keys(params).map(function (key) {
        return encodeURIComponent(key) + '=' +
          encodeURIComponent(params[key]);
      }).join('&');
    }
    // Derive a fetch URL from the current URL, sans the GraphQL parameters.
    var graphqlParamNames = {
      query: true,
      variables: true,
      operationName: true
    };
    var otherParams = {};
    for (var k in parameters) {
      if (parameters.hasOwnProperty(k) && graphqlParamNames[k] !== true) {
        otherParams[k] = parameters[k];
      }
    }

    

    
      // We don't use safe-serialize for location, because it's not client input.
      var fetchURL = locationQuery(otherParams, '/v1/graphql');

      // Defines a GraphQL fetcher using the fetch API.
      function graphQLHttpFetcher(graphQLParams) {
          return fetch(fetchURL, {
            method: 'post',
            headers: {
              'Accept': 'application/json',
              'Content-Type': 'application/json',
              'Authorization': 'Bearer oudelali'
            },
            body: JSON.stringify(graphQLParams),
            credentials: 'same-origin',
          }).then(function (response) {
            return response.text();
          }).then(function (responseBody) {
            try {
              return JSON.parse(responseBody);
            } catch (error) {
              return responseBody;
            }
          });
      }
    

    
      var fetcher = graphQLHttpFetcher;
    

    // When the query and variables string is edited, update the URL bar so
    // that it can be easily shared.
    function onEditQuery(newQuery) {
      parameters.query = newQuery;
      
    }
    function onEditVariables(newVariables) {
      parameters.variables = newVariables;
      
    }
    function onEditOperationName(newOperationName) {
      parameters.operationName = newOperationName;
      
    }
    function updateURL() {
      var cleanParams = Object.keys(parameters).filter(function(v) {
        return parameters[v];
      }).reduce(function(old, v) {
        old[v] = parameters[v];
        return old;
      }, {});

      history.replaceState(null, null, locationQuery(cleanParams) + window.location.hash);
    }
    // Render <GraphiQL /> into the body.
    ReactDOM.render(
      React.createElement(GraphiQL, {
        fetcher: fetcher,
        onEditQuery: onEditQuery,
        onEditVariables: onEditVariables,
        onEditOperationName: onEditOperationName,
        query: null,
        response: null,
        variables: null,
        operationName: null,
        editorTheme: null,
        websocketConnectionParams: null,
      }),
      document.body
    );
  </script>
</body>
</html>",
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:11113\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "🕸️ - Serving the GraphIQL UI. http://localhost:11113/graphiql",
    ],
  ],
}
`;

exports[`wrapHTTPRouterWithGraphIQL should work 2`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "DEV_ACCESS_MECHANISM",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "⏳ - Cleared a delay",
    ],
    Array [
      "⏳ - Created a delay:",
      30000,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:11111\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "🕸️ - Serving the GraphIQL UI. http://localhost:11111/graphiql",
    ],
    Array [
      "CALL {\\"id\\":\\"0\\",\\"protocol\\":\\"http\\",\\"ip\\":\\"_ip_\\",\\"startInBytes\\":147,\\"startOutBytes\\":0,\\"startTime\\":1267833600000,\\"url\\":\\"/v1/ping\\",\\"method\\":\\"GET\\",\\"reqHeaders\\":{\\"accept\\":\\"application/json, text/plain, */*\\",\\"user-agent\\":\\"__avoid_axios_version__\\",\\"host\\":\\"localhost:11111\\",\\"connection\\":\\"close\\"},\\"errored\\":false,\\"endTime\\":1267833600000,\\"endInBytes\\":147,\\"endOutBytes\\":179,\\"statusCode\\":200,\\"resHeaders\\":{\\"content-type\\":\\"application/json\\"},\\"operationId\\":\\"getPing\\"}",
    ],
  ],
}
`;
